# Chimera-Omega

./: .gitignore  README.md  gradle.properties  settings.gradle
.github/keystore/: omega.keystore
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml  target.xml
app/src/main/assets/: payload.xml  target.xml 
app/src/main/cpp/: CMakeLists.txt  VoidEngine.cpp
app/src/main/java/com/chimera/touch/: ChimeraApplication.java  ESPOverlay.java  MainActivity.java  TouchService.java
app/src/main/java/com/omega/host/: BootReceiver.java  HostAccessibility.java  HostService.java  MainActivity.java  MediaProjectionVault.java  OmegaMacroService.java  OpticalPhantomService.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_config.xml  accessibility_service_config.xml
com/omega/host/: OpticalPhantomService.java
